feat: Spring Boot upgrade to 3.3.13: initial commit: Changes by OpenRewrite plugin. Bump atp libraries versions to upgraded to Spring Boot 3.3.13 ones. Bump project version to 3.0.0-SNAPSHOT.