@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -19,13 +19,12 @@ package org.qubership.atp.mia.ei.component;
 
 import java.util.List;
 
-import javax.validation.constraints.NotNull;
-
 import org.qubership.atp.ei.node.dto.ExportFormat;
 import org.qubership.atp.mia.ei.service.ExportStrategy;
 import org.qubership.atp.mia.exceptions.ei.MiaExportTypeNotSupportException;
 import org.springframework.stereotype.Component;
 
+import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -46,6 +45,6 @@ public class ExportStrategiesRegistry {
         return exportStrategies.stream()
                 .filter(exportStrategy -> format.equals(exportStrategy.getFormat()))
                 .findFirst()
-                .orElse(exportStrategies.get(0));
+                .orElse(exportStrategies.getFirst());
     }
 }
