@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -208,7 +208,7 @@ public class SshExecutionHelperService {
         for (String pathToFile : pathsToFiles) {
             try {
                 shellRepository.transferFileOnServer(command, pathToFile, pathForUpload);
-                commandResponse.addDescription(String.format("File [%s] has been moved to [%s]",
+                commandResponse.addDescription("File [%s] has been moved to [%s]".formatted(
                         pathToFile, pathForUpload));
             } catch (Exception e) {
                 throw new SshTransferFileFailException(pathToFile, pathForUpload, e);
