@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -17,10 +17,10 @@
 
 package org.qubership.atp.mia.utils;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
 
 import java.text.SimpleDateFormat;
@@ -30,12 +30,10 @@ import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.apache.http.Header;
-import org.apache.http.HttpResponse;
-import org.apache.http.message.BasicHeader;
-import org.junit.Assert;
-import org.junit.Ignore;
-import org.junit.jupiter.api.Disabled;
+import org.apache.hc.core5.http.ClassicHttpResponse;
+import org.apache.hc.core5.http.Header;
+import org.apache.hc.core5.http.message.BasicHeader;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mockito;
@@ -45,6 +43,7 @@ import org.qubership.atp.mia.model.ContentType;
 import org.qubership.atp.mia.model.configuration.CommonConfiguration;
 import org.qubership.atp.mia.model.impl.FlowData;
 import org.qubership.atp.mia.model.impl.VariableFormat;
+
 //@Disabled("Temporarily disabled for refactoring")
 @ExtendWith(SkipTestInJenkins.class)
 public class UtilsTest extends ConfigTestBean {
@@ -56,12 +55,12 @@ public class UtilsTest extends ConfigTestBean {
 
     private void macroAssert(String actualInput, String expected) {
         String actual = miaContext.get().evaluate(actualInput);
-        String macroFailMsg = String.format("Macros failed. actual [%s]\n is not equal to expected [%s].",
+        String macroFailMsg = "Macros failed. actual [%s]\n is not equal to expected [%s].".formatted(
                 actual, expected);
-        assertEquals(macroFailMsg, expected, actual);
+        assertEquals(expected, actual, macroFailMsg);
     }
 
-    HttpResponse response = Mockito.mock(HttpResponse.class);
+    ClassicHttpResponse response = Mockito.mock(ClassicHttpResponse.class);
 
     @Test
     public void evaluateMacros_whenSeveralSameInLine() {
@@ -72,9 +71,14 @@ public class UtilsTest extends ConfigTestBean {
 
     @Test
     public void evaluateMacros_whenSeveralDifferentInLine() {
-        String actual = "\nRandom ${Random(1)}\nRandom ${Random(1)}\nRandom ${Random(1)}"
-                + "Date ${Date_Formatter(20190826 12000000, yyyyMMdd hhmmssSS, yyyy-MMMM-dd)}"
-                + "\nTimestamp ${Timestamp(YYYY)}";
+        String actual = """
+                
+                Random ${Random(1)}
+                Random ${Random(1)}
+                Random ${Random(1)}\
+                Date ${Date_Formatter(20190826 12000000, yyyyMMdd hhmmssSS, yyyy-MMMM-dd)}
+                Timestamp ${Timestamp(YYYY)}\
+                """;
         String expected = "\nRandom 0\nRandom 0\nRandom 0"
                 + "Date 2019-August-26"
                 + "\nTimestamp " + new SimpleDateFormat("YYYY").format(Calendar.getInstance().getTime());
@@ -83,9 +87,14 @@ public class UtilsTest extends ConfigTestBean {
 
     @Test
     public void evaluateMacros_whenSeveralMacros_andSymbolsBeforeThem() {
-        String actual = "\nRandom \"${Random(1)}\"\nRandom /${Random(1)}\nRandom $$${Random(1)}"
-                + " Date {{}}${Date_Formatter(20190826 12000000, yyyyMMdd hhmmssSS, yyyy-MMMM-dd)}"
-                + "\nTimestamp ${Timestamp(YYYY)}";
+        String actual = """
+                
+                Random "${Random(1)}"
+                Random /${Random(1)}
+                Random $$${Random(1)}\
+                 Date {{}}${Date_Formatter(20190826 12000000, yyyyMMdd hhmmssSS, yyyy-MMMM-dd)}
+                Timestamp ${Timestamp(YYYY)}\
+                """;
         String expected = "\nRandom \"0\"\nRandom /0\nRandom $$0"
                 + " Date {{}}2019-August-26"
                 + "\nTimestamp " + new SimpleDateFormat("YYYY").format(Calendar.getInstance().getTime());
@@ -100,15 +109,20 @@ public class UtilsTest extends ConfigTestBean {
             String macroFailMsg = String.format("Macros error! Matcher failed at the %d iteration of find(),"
                             + "Found %d occurrences of expected pattern: [%s], in actual string: [%s], but need [%d]",
                     i, i - 1, expectedPattern.pattern(), actual, i);
-            assertTrue(macroFailMsg, matcher.find());
+            assertTrue(matcher.find(), macroFailMsg);
         }
     }
 
     @Test
     public void evaluateMacros_whenSeveralMacros_andSymbolsBeforeThem2() {
-        String actual = "\nRandom \"${Random(1)}\"\nRandom /${Random(1)}\nRandom ${Random(1)}"
-                + "Date ${Date_Formatter(20190826 12000000, yyyyMMdd hhmmssSS, yyyy-MMMM-dd)}"
-                + "\nTimestamp ${Timestamp(YYYY)}";
+        String actual = """
+                
+                Random "${Random(1)}"
+                Random /${Random(1)}
+                Random ${Random(1)}\
+                Date ${Date_Formatter(20190826 12000000, yyyyMMdd hhmmssSS, yyyy-MMMM-dd)}
+                Timestamp ${Timestamp(YYYY)}\
+                """;
         String expected = "\nRandom \"0\"\nRandom /0\nRandom 0"
                 + "Date 2019-August-26"
                 + "\nTimestamp " + new SimpleDateFormat("YYYY").format(Calendar.getInstance().getTime());
@@ -134,9 +148,12 @@ public class UtilsTest extends ConfigTestBean {
         actual += "\nCheckDigit ${Check_Digit(123456789)}";
         expectedResult += "\nCheckDigit 7";
         macroAssert(actual, expectedResult);
-        actual += "\nCycleTextGeneration ${CycleTextGeneration('EVENT: [EventAttr1],[EventAttr2],[EventAttr3],"
-                + "[EventAttr4],[EventAttr5]', '\\n', 'EventAttr2', 'EventAttr1->[0, 1, 2]',"
-                + "'EventAttr2->[9, 8, 7]', 'EventAttr3-> Z -> string', 'EventAttr5-> [I, , II] -> string')}";
+        actual += """
+                
+                CycleTextGeneration ${CycleTextGeneration('EVENT: [EventAttr1],[EventAttr2],[EventAttr3],\
+                [EventAttr4],[EventAttr5]', '\\n', 'EventAttr2', 'EventAttr1->[0, 1, 2]',\
+                'EventAttr2->[9, 8, 7]', 'EventAttr3-> Z -> string', 'EventAttr5-> [I, , II] -> string')}\
+                """;
         expectedResult += "\nCycleTextGeneration EVENT: 0,9,\"Z\",,\"I\"\nEVENT: 1,8,\"Z\",,\nEVENT: 2,7,\"Z\",,\"II\"";
         macroAssert(actual, expectedResult);
         actual += "\nTimestamp ${Timestamp(YYYY)}";
@@ -146,41 +163,45 @@ public class UtilsTest extends ConfigTestBean {
 
     @Test
     public void evaluateMacros_whenJsonExample() {
-        String actual = "{\n"
-                + "\"metadata\": {\n"
-                + "\"name\": \"${GenerateUuid()}\",\n"
-                + "\"labels\": {},\n"
-                + "\"annotations\": {\n"
-                + "\"username\": \"${Random(1)}\"\n"
-                + "}\n"
-                + "},\n"
-                + "\"spec\": {\n"
-                + "\"definition_name\": \"EFD\",\n"
-                + "\"params\": [{}\n"
-                + "],\n"
-                + "\"enable_tracing\": false\n"
-                + "}\n"
-                + "}";
+        String actual = """
+                {
+                "metadata": {
+                "name": "${GenerateUuid()}",
+                "labels": {},
+                "annotations": {
+                "username": "${Random(1)}"
+                }
+                },
+                "spec": {
+                "definition_name": "EFD",
+                "params": [{}
+                ],
+                "enable_tracing": false
+                }
+                }\
+                """;
         macroAssert(actual, uuidPattern, 1);
         actual = miaContext.get().evaluate(actual);
         Matcher m = uuidPattern.matcher(actual);
-        Assert.assertTrue(m.find());
+        Assertions.assertTrue(m.find());
         String uuid = m.group();
-        String expected = String.format("{\n"
-                + "\"metadata\": {\n"
-                + "\"name\": \"%s\",\n"
-                + "\"labels\": {},\n"
-                + "\"annotations\": {\n"
-                + "\"username\": \"0\"\n"
-                + "}\n"
-                + "},\n"
-                + "\"spec\": {\n"
-                + "\"definition_name\": \"EFD\",\n"
-                + "\"params\": [{}\n"
-                + "],\n"
-                + "\"enable_tracing\": false\n"
-                + "}\n"
-                + "}", uuid);
+        String expected = """
+                {
+                "metadata": {
+                "name": "%s",
+                "labels": {},
+                "annotations": {
+                "username": "0"
+                }
+                },
+                "spec": {
+                "definition_name": "EFD",
+                "params": [{}
+                ],
+                "enable_tracing": false
+                }
+                }\
+                """.formatted(uuid);
         macroAssert(actual, expected);
     }
 
@@ -265,7 +286,7 @@ public class UtilsTest extends ConfigTestBean {
         flowData.addParameter(k, v);
         flowData.addParameter("projectId", "46578a43-4cfb-46e4-80b8-95ce21151a9f");
         String res = miaContext.get().evaluate(text);
-        Assert.assertEquals(expected, res);
+        Assertions.assertEquals(expected, res);
     }
 
     @Test
@@ -278,7 +299,7 @@ public class UtilsTest extends ConfigTestBean {
         }});
         flowData.addParameter("projectId", "46578a43-4cfb-46e4-80b8-95ce21151a9f");
         String res = miaContext.get().evaluate(text);
-        Assert.assertEquals(expected, res);
+        Assertions.assertEquals(expected, res);
     }
 
     @Test
@@ -334,7 +355,7 @@ public class UtilsTest extends ConfigTestBean {
         return miaContext.get().getFlowData();
     }
 
-    private HttpResponse constructAndStubHttpResponse(String name, String value) {
+    private ClassicHttpResponse constructAndStubHttpResponse(String name, String value) {
         //construct
         Header[] headers = new Header[]{new BasicHeader(name, value)};
         //stub
